# biofilm-processing

./: .gitignore  README.md  pyproject.toml  regen_overlays.py  run_tn_plates.sh  testMag.py
assets/: phenotypr-icon.icns
scripts/: install-desktop-shortcut.py  install-desktop-shortcut.sh  installDesktopShortcut.py  regenOverlays.py  regenOverlaysFromIndex.py  regenOverlays_reimaging.sbatch  runSinglePlate.py
scripts/reimaging/: buildProcIndex.py  buildTrainReimageIndex.py  convertTof16.py  runProcFromIndexMP.py  runTrackingMpReimaging.py  runWholeFromIndex.py
scripts/training/: buildColFeatIndex.py  runTrackingMpTraining.py
scripts/transposons/: buildTnIndex.py  build_tn_index.py  plotTnHeatmap.py  plot_tn_heatmap.py  regenOverlays.py  runTnPlates.sh  testPipeline.py  test_pipeline.py
src/multiWellAnalysis/: __init__.py
src/multiWellAnalysis/colony/: README.md  __init__.py  aggregateColonyFeats.py  colonyFeats.py  colonyFeatsMicrons.py  io_utils.py  makeTrackingGifs.py  runColFeatsCLI.py  runColonyFeatsGUI.py  runColonyFeatsTrackedMP.py  runTrackingGUI.py  runTrackingMpTraining.py  segmentation.py  verifyColFeats.py  wellAgg.py  wellAggMicrons.py
src/multiWellAnalysis/gui/: app.py  state.py
src/multiWellAnalysis/intensity/: intensityFeats.py  io_utils.py  runIntensityFeatsMP.py
src/multiWellAnalysis/processing/: README.md  __init__.py  analysis_main.py  batch_runner.py  (+12 more)
testProcPrototype/: analysis_main.py  helpers.py  io_utils.py  plotting_tools.py  preprocessing.py  registration.py  runSinglePlateTest.py  runTrainingPlates.py  segmentation.py
(+20 files in other folders)
